--- a/OpsManage/templates/cmdb/basicData/userManage.html
+++ b/OpsManage/templates/cmdb/basicData/userManage.html
@@ -35,7 +35,7 @@
 
                 <div class="box-header with-border">
                     <h3 class="box-title">
-                        <i class="glyphicon  glyphicon-user"></i>
+                        <i class="fa fa-users"></i>
                         用户列表
                     </h3>
                 </div>
