--- a/OpsManage/templates/cmdb/ServerManage/asset.html
+++ b/OpsManage/templates/cmdb/ServerManage/asset.html
@@ -46,8 +46,7 @@
                     <!-- 查询设备类型 -->
                     <div class="col-sm-1 no-padding margin-r-5">
                         <select class="form-control  m-b input-sm select2 no-margin" name="myType" id="selectedType"
-                                style="width: 100
-">
+                                style="width: 100px">
                             <option value="0" selected="selected">资产类型</option>
                             <option value="1">服务器</option>
                             <option value="2">网络设备</option>
