--- a/OpsManage/templates/cmdb/ServerManage/add/addOneToOne/addServer.html
+++ b/OpsManage/templates/cmdb/ServerManage/add/addOneToOne/addServer.html
@@ -12,6 +12,12 @@
                 <span>请填写设备信息</span>
             </h1>
         </div>
+        <div class="container2" style="border-bottom: 0;">
+            设备厂商：{{ vendor }} <br>
+            设备型号：{{ model }}<br>
+            设备序列号：{{ sn }}<br>
+            设备类型：{{ asset_type }}<br>
+        </div>
         <div class="container">
             <form class="contact" action="serverSubmit" method="post" id="form">
             <div class="row clearfix">
@@ -21,7 +27,11 @@
                 </div>
                 <div class="ctrl">
                     <select  name="sub_asset_type" >
-                        <option value="0">请选择服务器类型</option>
+                        {% if asset_subtype != "0" %}
+                            <option value="{{ asset_subtype }}">{{ asset_subtype_display }}</option>
+                        {% else %}
+                            <option value="0">请选择服务器类型</option>
+                        {% endif %}
                         <option value="1">PC服务器</option>
                         <option value="2">小型机</option>
                         <option value="3">刀片机</option>
