--- a/OpsManage/templates/cmdb/ServerManage/add/editForeignKey/editModel.html
+++ b/OpsManage/templates/cmdb/ServerManage/add/editForeignKey/editModel.html
@@ -6,31 +6,10 @@
     <title>Title</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <!-- Bootstrap 3.3.7 -->
-    <link rel="stylesheet" href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="/static/bower_components/font-awesome/css/font-awesome.min.css">
-    <!-- Ionicons -->
-    <link rel="stylesheet" href="/static/bower_components/Ionicons/css/ionicons.min.css">
-    <!-- Theme style -->
+        <link rel="stylesheet" href="/static/dist/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+
     <link rel="stylesheet" href="/static/dist/css/AdminLTE.min.css">
-    <!-- AdminLTE Skins. Choose a skin from the css/skins
-         folder instead of downloading all of them to reduce the load. -->
-    <link rel="stylesheet" href="/static/dist/css/skins/_all-skins.min.css">
-    <!-- Morris chart -->
-    <link rel="stylesheet" href="/static/bower_components/morris.js/morris.css">
-    <!-- jvectormap -->
-    <link rel="stylesheet" href="/static/bower_components/jvectormap/jquery-jvectormap.css">
-    <!-- Date Picker -->
-    <link rel="stylesheet" href="/static/bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
-    <!-- Daterange picker -->
-    <link rel="stylesheet" href="/static/bower_components/bootstrap-daterangepicker/daterangepicker.css">
-    <!-- bootstrap wysihtml5 - text editor -->
-    <link rel="stylesheet" href="/static/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
 
-    <link rel="stylesheet" href="{% static 'css/cmdb/ServerManage/topFunc.css'%}">
-
-{#    <link rel="stylesheet" href="{% static 'css/cmdb/ServerManage/form.css'%}">#}
         <link href="/static/css/form2.css" rel="stylesheet" type="text/css">
         <style>
         body{font-family:'Open Sans',sans-serif;padding:20px;margin:0;background:url(/static/img/bg.png);}
