--- a/OpsManage/templates/cmdb/basicData/orgManage.html
+++ b/OpsManage/templates/cmdb/basicData/orgManage.html
@@ -37,9 +37,6 @@
                         <a href="http://127.0.0.1:8000/cmdb/editOrg" target="_blank" style="margin-left: 1em;">
                             <span class="fa fa-gear text-primary pull-right" style="font-size: 18px"></span>
                         </a>
-
-
-
                 </div>
 
                 <div class="box-body">
@@ -57,7 +54,7 @@
                             </div>
                             <!-- /.box -->
                         </div>
-{#                        <button style="width: 120px;position:relative;top: 20px;left:1em;" onclick="window.open('http://127.0.0.1:8000/cmdb/editOrg')" class="btn btn-block btn-info">编辑组织单位</button>#}
+
                     </div>
                 </div>
             </div>
@@ -86,7 +83,7 @@
         // 设置表格大小
         var container3 = document.getElementById("orgChart");
         var width3 = $("#orgdiv").width();
-        $("#orgChart").css({"width": width3, "height": "500px"});
+        $("#orgChart").css({"width": width3, "height": "650px"});
 
         // 绘制表格
         var myChart = echarts.init(container3, 'customed');
@@ -112,38 +109,40 @@
                     type: 'tree',
                     // layout: 'radial',
                     orient: 'vertical',  // vertical horizontal
+                    height: '60%',
                     initialTreeDepth:4,
-                    rootLocation: {x: 100, y: 230}, // 根节点位置  {x: 100, y: 'center'}
-                    nodePadding: 8,
-                    layerPadding: 200,
+                    rootLocation: {x: 100, y:'center'}, // 根节点位置  {x: 100, y: 'center'}
+                    nodePadding: 20,
+                    layerPadding: 100,
                     hoverable: true,
                     roam: true,
-                    symbolSize: 15,
+                    symbolSize: 12,
                     symbol: 'emptyCircle',
                     itemStyle: {
                         normal: {
                             color: '#4883b4',
                             label: {
                                 show: true,
-                                position: 'right',
+                                position: 'top',
                                 formatter: "{b}",
+                                rotate: -90,
+                                verticalAlign: 'middle',
+                                align: 'right',
                                 textStyle: {
                                     color: '#000',
-                                    fontSize: 14
+                                    fontSize: 12,
                                 },
                             },
                             lineStyle: {
                                 color: '#ccc',
                                 type: 'curve', // 'curve'|'broken'|'solid'|'dotted'|'dashed'
-                                // shadowColor: 'rgba(0, 0, 0, 0.5)',
-                                // shadowBlur: 1
                                 curveness: 0.6,
                             }
                         },
                         emphasis: {
                             color: '#4883b4',
                             label: {
-                                show: false
+                                show: false,
                             }
                         },
                         borderWidth: 0
