--- a/OpsManage/templates/cmdb/ServerManage/add/add.html
+++ b/OpsManage/templates/cmdb/ServerManage/add/add.html
@@ -398,7 +398,7 @@
 
         <div class="box-footer">
             <input class="submit btn  btn-primary pull-right" type="submit"  id="submit" value="下一步">
-            <button class="btn  btn-success" onclick="window.location.href='/cmdb/asset'">取消</button>
+            <button type="button" class="btn  btn-success" onclick="window.location.href='/cmdb/asset'">取消</button>
         </div>
 
     </form>
