--- a/OpsManage/templates/cmdb/basicData/orgManage.html
+++ b/OpsManage/templates/cmdb/basicData/orgManage.html
@@ -123,11 +123,11 @@
                             color: '#4883b4',
                             label: {
                                 show: true,
-                                position: 'top',
+                                position: 'right',
                                 formatter: "{b}",
-                                rotate: -90,
+                                // rotate: -90,
                                 verticalAlign: 'middle',
-                                align: 'right',
+                                align: 'left',
                                 textStyle: {
                                     color: '#000',
                                     fontSize: 12,
